--- a/src/styles/404.module.scss
+++ b/src/styles/404.module.scss
@@ -1,5 +1,3 @@
-@import "../scss/variables";
-
 .date-info {
   font-size: clamp(1.3rem, 1.8vw, 1.8rem);
   font-weight: 900;
@@ -37,7 +35,7 @@
     color: #444;
 
     &:hover {
-      color: $main-color;
+      color: var(--main-color);
     }
   }
 }
