--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -1,5 +1,3 @@
-@import "../scss/variables";
-
 .footer {
   margin-top: 30px;
   padding-top: 40px;
@@ -13,7 +11,7 @@
     transition-duration: 0.1s;
 
     &:hover {
-      color: $main-color2;
+      color: var(--main-color);
     }
   }
 }
