--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -1,5 +1,3 @@
-@import "../scss/variables";
-
 .header {
   margin-top: unquote("max(100px, 8vh)");
   text-align: center;
@@ -17,7 +15,7 @@
     color: #444;
 
     &:hover {
-      background: linear-gradient(135deg, $main-color 10%, $sub-color 90%);
+      background: linear-gradient(135deg, var(--main-color) 10%, var(--sub-color) 90%);
       background-clip: text;
       -webkit-text-fill-color: rgba(255, 255, 255, 0);
     }
@@ -27,7 +25,7 @@
 .page-title {
   display: inline-block;
   margin-bottom: 30px;
-  background: linear-gradient(135deg, $main-color 10%, $sub-color 90%);
+  background: linear-gradient(135deg, var(--main-color) 10%, var(--sub-color) 90%);
   background-clip: text;
   -webkit-text-fill-color: rgba(255, 255, 255, 0);
   font-size: clamp(3rem, 3vw, 3.8rem);
