--- a/src/styles/pagination.module.scss
+++ b/src/styles/pagination.module.scss
@@ -1,5 +1,3 @@
-@import "../scss/variables";
-
 .pagination {
   position: relative;
   width: 50%;
@@ -30,24 +28,24 @@
   transform: translateY(-50%);
   display: inline-block;
   padding: 5px 20px;
-  border: 2px solid $main-color2;
+  border: 2px solid var(--main-color);
   border-radius: 50px;
   transition: 0.3s;
   text-decoration: none;
 
   svg {
-    color: $main-color2;
+    color: var(--main-color);
     font-size: 1.6rem;
   }
 
   span {
-    color: $main-color2;
+    color: var(--main-color);
     font-size: 1.6rem;
     font-weight: 900;
   }
 
   &:hover {
-    background: $main-color2;
+    background: var(--main-color);
 
     svg,
     span {
@@ -73,7 +71,7 @@
 
   .text {
     padding: 1rem 1.35rem;
-    background-color: $main-color2;
+    background-color: var(--main-color);
     color: #fff;
   }
 
@@ -88,7 +86,7 @@
 
     &:hover {
       a {
-        background-color: $main-color2;
+        background-color: var(--main-color);
       }
     }
   }
