--- a/src/styles/post.module.scss
+++ b/src/styles/post.module.scss
@@ -1,5 +1,3 @@
-@import "../scss/variables";
-
 .blog-post {
   width: unquote("max(52%, 324px)");
   margin-left: 13vw;
@@ -17,18 +15,14 @@
     margin-top: 50px;
     margin-bottom: 30px;
     padding-bottom: 8px;
-    border-bottom: 7px solid;
-    border-image: linear-gradient(to right, $main-color2 0%, rgba($main-color2, 0.6) 100%);
-    border-image-slice: 1;
+    border-bottom: 7px solid var(--main-color);
     font-size: clamp(2.6rem, 5vw, 4rem);
   }
 
   h2 {
     margin: 50px 0 20px;
-    padding: 8px 0 8px 2rem;
-    border-left: 10px solid;
-    border-image: linear-gradient(to bottom, $main-color2 0%, rgba($main-color2, 0.4) 100%);
-    border-image-slice: 1;
+    padding: 7px 0 7px 2rem;
+    border-left: 9px solid var(--main-color);
     font-size: clamp(2.1rem, 4.1vw, 3.5rem);
   }
 
@@ -103,7 +97,7 @@
       th {
         border: 1px solid #bbb;
         padding: 10px 15px;
-        background: $main-color2;
+        background: var(--main-color);
         color: #fff;
         font-size: clamp(1.5rem, 1.7vw, 1.7rem);
         font-weight: 400;
@@ -186,7 +180,7 @@
     h2 {
       margin: 45px 0 20px;
       padding: 4px 0 4px 1.2rem;
-      border-left: 7px solid $main-color2;
+      border-left: 7px solid var(--main-color);
     }
 
     h3 {
@@ -278,7 +272,7 @@
   font-size: 2rem;
   letter-spacing: 1px;
   color: #666;
-  border-bottom: 3px dotted $main-color2;
+  border-bottom: 3px dotted var(--main-color);
   padding-bottom: 7px;
   margin-bottom: 15px;
 }
