--- a/src/styles/postList.module.scss
+++ b/src/styles/postList.module.scss
@@ -1,5 +1,3 @@
-@import "../scss/variables";
-
 .post-list {
   list-style: none;
   width: clamp(400px, 65vw, 1000px);
@@ -33,7 +31,7 @@
     line-height: 1.5;
 
     &:hover {
-      background: linear-gradient(135deg, $main-color 10%, $sub-color 90%);
+      background: linear-gradient(135deg, var(--main-color) 10%, var(--sub-color) 90%);
       background-clip: text;
       -webkit-text-fill-color: rgba(255, 255, 255, 0);
     }
@@ -81,7 +79,7 @@
     transition-duration: 0.1s;
 
     &:hover {
-      background: linear-gradient(135deg, $main-color 10%, $sub-color 90%);
+      background: linear-gradient(135deg, var(--main-color) 10%, var(--sub-color) 90%);
       background-clip: text;
       -webkit-text-fill-color: rgba(255, 255, 255, 0);
     }
