--- a/src/styles/search.module.scss
+++ b/src/styles/search.module.scss
@@ -1,5 +1,3 @@
-@import "../scss/variables";
-
 .wrapper {
   position: fixed;
   top: 30px;
@@ -52,7 +50,7 @@
   appearance: none;
 
   &:focus {
-    box-shadow: 0 0 7px $main-color2;
+    box-shadow: 0 0 7px var(--main-color2);
     border: 1px solid #1675cc;
   }
 }
@@ -97,7 +95,7 @@
     transition: 0.1s;
 
     &:hover {
-      color: $main-color2;
+      color: var(--main-color2);
     }
   }
 }
