--- a/src/styles/tableOfContent.module.scss
+++ b/src/styles/tableOfContent.module.scss
@@ -1,5 +1,3 @@
-@import "../scss/variables";
-
 .table-of-content {
   width: 30%;
   margin-top: 80px;
@@ -25,11 +23,11 @@
         color: #444;
 
         &:hover {
-          color: $main-color2;
+          color: var(--main-color);
         }
 
         &.active {
-          color: $main-color2;
+          color: var(--main-color);
 
           &::before {
             position: absolute;
