--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -2,7 +2,7 @@
   margin-top: 30px;
   padding-top: 40px;
   padding-bottom: 40px;
-  background: #444;
+  background: var(--footer-bg-color);
   color: #ccc;
   line-height: 1.5;
 
