--- a/src/styles/postInfo.module.scss
+++ b/src/styles/postInfo.module.scss
@@ -12,7 +12,7 @@
   }
 
   a {
-    color: #444;
+    color: var(--link-color);
 
     &:hover {
       background: linear-gradient(135deg, var(--main-color) 10%, var(--sub-color) 90%);
