--- a/src/styles/postList.module.scss
+++ b/src/styles/postList.module.scss
@@ -25,7 +25,7 @@
   margin-bottom: 10px;
 
   a {
-    color: #444;
+    color: var(--link-color);
     font-size: clamp(1.8rem, 2vw, 3.2rem);
     font-weight: 500;
     line-height: 1.5;
@@ -74,7 +74,7 @@
 
   a {
     margin-right: 9px;
-    color: #444;
+    color: var(--link-color);
     line-height: 1.5;
     transition-duration: 0.1s;
 
