--- a/src/styles/search.module.scss
+++ b/src/styles/search.module.scss
@@ -18,6 +18,7 @@
   background-color: #ddd;
   border-radius: 100vh;
   transition: 0.2s;
+  color: var(--text-color);
   background-image: linear-gradient(#e8e8e8 0%, #d6d6d6 100%);
   box-shadow: inset 0 2px 0 rgba(255, 255, 255, 0.2), 0 2px 2px rgba(0, 0, 0, 0.1);
   border-bottom: solid 2px #b5b5b5;
@@ -50,7 +51,7 @@
   appearance: none;
 
   &:focus {
-    box-shadow: 0 0 7px var(--main-color2);
+    box-shadow: 0 0 7px var(--main-color);
     border: 1px solid #1675cc;
   }
 }
@@ -95,7 +96,7 @@
     transition: 0.1s;
 
     &:hover {
-      color: var(--main-color2);
+      color: var(--main-color);
     }
   }
 }
