--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -3,6 +3,10 @@
   text-align: center;
 }
 
+.toggle-switch {
+  border: 1px solid red;
+}
+
 .header-title {
   margin-bottom: 5vh;
   margin-bottom: unquote("max(5vh, 30px)");
