--- a/src/styles/post.module.scss
+++ b/src/styles/post.module.scss
@@ -3,6 +3,15 @@
   margin-left: 13vw;
   margin-right: 5vw;
 
+  a {
+    color: var(--post-link-color);
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
   h1,
   h2,
   h3 {
