--- a/src/styles/toggleButton.module.scss
+++ b/src/styles/toggleButton.module.scss
@@ -1,13 +1,8 @@
 .wrapper {
-  position: fixed;
-  top: 35px;
-  right: 60px;
-  display: inline-block;
   cursor: pointer;
-  z-index: 2;
 
   svg {
-    font-size: 4.5rem;
+    font-size: 4.2rem;
   }
 }
 
@@ -28,15 +23,23 @@
 }
 
 @keyframes moon-rotation {
-  0%{ transform:rotateY(0);}
+  0%{
+    transform:rotateY(0);
+  }
 
-  100%{ transform:rotateY(180deg); }
+  100%{
+    transform:rotateY(180deg);
+  }
 }
 
 @keyframes sun-rotation {
-  0%{ transform:rotate(0);}
+  0%{
+    transform:rotate(0);
+  }
 
-  100%{ transform:rotate(360deg); }
+  100%{
+    transform:rotate(360deg);
+  }
 }
 
 @media (max-width: 768px) {
@@ -45,7 +48,7 @@
     right: 15px;
 
     svg {
-      font-size: 3.9rem;
+      font-size: 3.5rem;
     }
   } 
 }
