--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -21,12 +21,12 @@
   svg {
     display: block;
     font-size: clamp(4rem, 3vw, 5rem);
-    color: #444;
+    color: var(--text-color);
     transition-duration: 0.1s;
   }
 
   span {
-    color: #444;
+    color: var(--text-color);
     font-size: clamp(2rem, 1.6vw, 2.5rem);
   }
 
