--- a/src/styles/tableOfContent.module.scss
+++ b/src/styles/tableOfContent.module.scss
@@ -6,8 +6,13 @@
   ul {
     position: sticky;
     top: 9vh;
-    padding-left: 10px;
+    padding-left: 12px;
     list-style: none;
+    margin-left: 2px;
+
+    ul {
+      border-left: 1px solid #cdcdcd;
+    }
 
     li {
       margin-bottom: 8px;
@@ -34,7 +39,7 @@
             content: "▶️";
             font-size: 1.35rem;
             top: 50%;
-            left: -20px;
+            left: -18px;
             transform: translateY(-50%);
           }
         }
