--- a/src/styles/post.module.scss
+++ b/src/styles/post.module.scss
@@ -157,7 +157,7 @@
 
   details {
     width: 90%;
-    margin: 20px 0;
+    margin: 20px 0 0;
     padding: 15px 0 15px 25px;
     border-radius: 5px;
     box-shadow: 0 0 2px 3px #eee;
