--- a/src/styles/postInfo.module.scss
+++ b/src/styles/postInfo.module.scss
@@ -7,7 +7,7 @@
     margin-right: 10px;
   }
 
-  p {
+  li {
     margin-right: 20px;
   }
 
@@ -30,6 +30,7 @@
   margin: 0 0 12px;
   font-size: clamp(1.5rem, 1.8vw, 1.8rem);
   line-height: 1.5;
+  list-style: none;
 }
 
 .series {
@@ -53,8 +54,9 @@
   flex-wrap: wrap;
   margin-bottom: 12px;
   font-size: clamp(1.5rem, 1.3vw, 1.7rem);
+  list-style: none;
 
-  p {
+  li {
     margin-right: 30px;
     letter-spacing: 0.5px;
   }
