--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -146,7 +146,7 @@ body[data-lock="lock"] {
 
   p {
     margin: 0;
-    font-size: clamp(1.3rem, 1.5vw, 1.6rem);
+    font-size: clamp(1.3rem, 1.5vw, 1.6rem) !important;
     line-height: 1.6;
   }
 
