--- a/src/styles/search.module.scss
+++ b/src/styles/search.module.scss
@@ -40,6 +40,7 @@
   height: 80vh;
   background-color: rgba(0, 0, 0, 0.8);
   border: none;
+  overflow: hidden;
 
   &::backdrop {
     background-color: rgba(0, 0, 0, 0.4);
@@ -52,8 +53,10 @@
   padding: 0.8rem;
   border-radius: 10px;
   appearance: none;
-  margin: 50px auto;
+  margin: 50px auto 20px;
   width: 30%;
+  font-size: 2rem;
+  font-weight: bold;
 
   &:focus {
     box-shadow: 0 0 7px var(--main-color);
@@ -62,14 +65,14 @@
 }
 
 .result-area {
-  // width: 250%;
-  // max-height: 80vh;
-  overflow-y: auto;
+  overflow-y: hidden;
 }
 
 .inner {
   padding: 18px 30px;
   list-style: none;
+  max-height: 60vh;
+  overflow-y: scroll;
 
   p {
     margin-bottom: 20px;
@@ -80,8 +83,11 @@
     line-height: 1.4;
 
     span {
+      display: inline-block;
+      margin-left: 10px;
+      margin-right: 5px;
       color: red;
-      font-size: 2rem;
+      font-size: 2.8rem;
       font-weight: 500;
     }
   }
@@ -102,9 +108,11 @@
   }
 }
 
+/*
 .check:checked ~ .list {
   display: block;
 }
+*/
 
 @media (max-width: 768px) {
   .menu-btn {
