--- a/src/styles/search.module.scss
+++ b/src/styles/search.module.scss
@@ -34,7 +34,7 @@
   }
 }
 
-.list {
+.dialog {
   position: relative;
   width: 60%;
   height: 80vh;
@@ -53,9 +53,9 @@
   padding: 0.8rem;
   border-radius: 10px;
   appearance: none;
-  margin: 50px auto 20px;
+  margin: 20px auto;
   width: 30%;
-  font-size: 2rem;
+  font-size: 1.67rem;
   font-weight: bold;
 
   &:focus {
@@ -64,33 +64,29 @@
   }
 }
 
-.result-area {
-  overflow-y: hidden;
+.message {
+  margin-bottom: 20px;
+  color: #fff;
+  font-size: 1.55rem;
+  font-weight: 900;
+  letter-spacing: 1px;
+  line-height: 1.4;
+  text-align: center;
+
+  span {
+    display: inline-block;
+    margin: 0 12px;
+    color: red;
+    font-size: 2.8rem;
+    font-weight: 500;
+  }
 }
 
 .inner {
   padding: 18px 30px;
   list-style: none;
-  max-height: 60vh;
+  max-height: 55vh;
   overflow-y: scroll;
-
-  p {
-    margin-bottom: 20px;
-    color: #fff;
-    font-size: 1.55rem;
-    font-weight: 900;
-    letter-spacing: 1px;
-    line-height: 1.4;
-
-    span {
-      display: inline-block;
-      margin-left: 10px;
-      margin-right: 5px;
-      color: red;
-      font-size: 2.8rem;
-      font-weight: 500;
-    }
-  }
 }
 
 .list-item {
@@ -108,12 +104,6 @@
   }
 }
 
-/*
-.check:checked ~ .list {
-  display: block;
-}
-*/
-
 @media (max-width: 768px) {
   .menu-btn {
     height: 38px;
@@ -125,10 +115,11 @@
     }
   }
 
+  .dialog {
+    width: 95%;
+  }
+
   .result-area {
-    left: 70%;
-    transform: translateX(-50%);
-    width: 160%;
     max-height: 60vh;
   }
 
