--- a/src/styles/search.module.scss
+++ b/src/styles/search.module.scss
@@ -8,29 +8,16 @@
 }
 
 .menu-btn {
-  display: block;
-  position: relative;
-  height: 45px;
-  width: 45px;
+  height: 60px;
+  width: 60px;
   margin-right: 10px;
-  background-color: #ddd;
-  border-radius: 100vh;
-  transition: 0.2s;
-  color: var(--text-color);
-  background-image: linear-gradient(#e8e8e8 0%, #d6d6d6 100%);
-  box-shadow: inset 0 2px 0 rgba(255, 255, 255, 0.2), 0 2px 2px rgba(0, 0, 0, 0.1);
-  border-bottom: solid 2px #b5b5b5;
+  background-color: transparent;
+  border: none;
   cursor: pointer;
 
   &:hover {
+    border-radius: 50%;
     background-color: #ededed;
-  }
-
-  span {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
   }
 }
 
@@ -89,13 +76,13 @@
 
 .result-area {
   padding: 18px 30px;
-  list-style: none;
   max-height: 55vh;
   overflow-y: scroll;
   overscroll-behavior: none;
 }
 
 .list-item {
+  list-style: none;
   margin-bottom: 10px;
 
   a {
