--- a/src/styles/post.module.scss
+++ b/src/styles/post.module.scss
@@ -247,8 +247,8 @@
     }
 
     aside {
-      padding: 10px 15px 10px 50px;
-      width: 80%;
+      padding: 10px 15px 0 50px;
+      width: 85%;
 
       p {
         line-height: 1.5;
