--- a/src/styles/toggleButton.module.css
+++ b/src/styles/toggleButton.module.css
@@ -7,7 +7,7 @@
 }
 
 .wrapper svg {
-  font-size: 4.2rem;
+  font-size: clamp(35px, 3vw, 42px);
 }
 
 .sunIcon {
@@ -34,7 +34,7 @@
   }
 
   100%{
-    transform:rotateY(0);
+    transform:rotateY(360deg);
   }
 }
 
@@ -43,8 +43,4 @@
     top: 15px;
     right: 15px;
   } 
-
-  .wrapper svg {
-    font-size: 3.5rem;
-  }
 }
