✨ #213 アイコンをFontAwesomeに変更

--- a/src/styles/search.module.scss
+++ b/src/styles/search.module.scss
@@ -17,7 +17,11 @@
 
   &:hover {
     border-radius: 50%;
-    background-color: #ededed;
+  }
+
+  svg {
+    color: var(--text-color);
+    font-size: 3.8rem;
   }
 }
 
