--- a/src/styles/post.module.css
+++ b/src/styles/post.module.css
@@ -275,20 +275,20 @@
   padding: 15px 19px 5px;
   border: 2px solid #bbb;
   border-radius: 3px;
-  color: #444;
+  color: var(--text-color);
   text-decoration: none;
   transition: 0.25s;
 }
 
 .before:hover,
 .after:hover {
-  background: rgba(240, 240, 240, 0.5);
+  background: rgba(220, 220, 220, 0.4);
 }
 
 .title {
   font-size: 2rem;
   letter-spacing: 1px;
-  color: #666;
+  color: var(--text-color);
   border-bottom: 3px dotted var(--heading-bar-color);
   padding-bottom: 7px;
   margin-bottom: 15px;
