--- a/src/styles/search.module.scss
+++ b/src/styles/search.module.scss
@@ -30,12 +30,12 @@
   width: 60%;
   height: 80vh;
   padding: 0;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.9);
   border: none;
   overflow: hidden;
 
   &::backdrop {
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.3);
   }
 }
 
@@ -97,7 +97,7 @@
     transition: 0.1s;
 
     &:hover {
-      color: var(--main-color);
+      color: var(--post-link-color);
     }
   }
 }
