--- a/src/styles/tableOfContent.module.scss
+++ b/src/styles/tableOfContent.module.scss
@@ -25,7 +25,7 @@
 
       a {
         position: relative;
-        color: #fff;
+        color: var(--text-color);
 
         &:hover {
           color: var(--post-link-color);
