--- a/src/styles/post.module.css
+++ b/src/styles/post.module.css
@@ -25,25 +25,23 @@
   margin-bottom: 30px;
   padding-bottom: 8px;
   border-bottom: 7px solid var(--heading-bar-color);
-  font-size: clamp(2.6rem, 5vw, 4rem);
+  font-size: clamp(1.6rem, 5vw, 2.5rem);
 }
 
 .blog-post h2 {
   margin: 50px 0 20px;
   padding: 7px 0 7px 2rem;
   border-left: 9px solid var(--heading-bar-color);
-  font-size: clamp(2.1rem, 4.1vw, 3.5rem);
+  font-size: clamp(1.3rem, 4.1vw, 2.2rem);
 }
 
 .blog-post h3 {
   margin: 30px 0 20px;
-  font-size: 2.8rem;
-  font-size: clamp(1.8rem, 4vw, 2.8rem);
+  font-size: clamp(1.15rem, 4vw, 2rem);
 }
 
 .blog-post p {
   margin-bottom: 15px;
-  font-size: clamp(1.5rem, 3vw, 1.75rem);
   letter-spacing: 0.5px;
   line-height: 1.75;
   text-indent: 0.8rem;
@@ -63,7 +61,6 @@
 
 .blog-post ol li {
   margin-bottom: 10px;
-  font-size: clamp(1.4rem, 1.65vw, 1.8rem);
   line-height: 1.5;
 }
 
@@ -74,7 +71,6 @@
 
 .blog-post ul li {
   margin-bottom: 10px;
-  font-size: clamp(1.4rem, 1.65vw, 1.8rem);
   line-height: 1.5;
 }
 
@@ -93,7 +89,6 @@
 
 .blog-post blockquote p {
   margin: 0;
-  font-size: clamp(1.4rem, 2vw, 1.65rem);
   line-height: 1.6;
 }
 
@@ -102,7 +97,7 @@
   top: 50%;
   transform: translateY(-40%);
   content: "❝";
-  font-size: 6rem;
+  font-size: 5rem;
   color: #999;
   margin-left: -50px;
 }
@@ -116,7 +111,6 @@
   padding: 10px 15px;
   background: var(--main-color);
   color: #fff;
-  font-size: clamp(1.5rem, 1.7vw, 1.7rem);
   font-weight: 400;
   line-height: 1.3;
   vertical-align: middle;
@@ -125,7 +119,6 @@
 .blog-post td {
   padding: 10px 20px;
   border: 1px solid #bbb;
-  font-size: clamp(1.4rem, 1.6vw, 1.7rem);
   line-height: 1.3;
 }
 
@@ -134,14 +127,13 @@
   width: 85%;
   margin-bottom: 20px;
   padding: 18px 30px 18px 60px;
-  background-color: rgba(#396afc, 0.15);
+  background-color: rgba(57, 106, 252, 0.15);
   border-radius: 3px;
-  box-shadow: 0 0 1.5px 1.5px rgba(#396afc, 0.25);
+  box-shadow: 0 0 1.5px 1.5px rgba(57, 106, 252, 0.25);
 }
 
 .blog-post aside p {
   margin: 0;
-  font-size: clamp(1.3rem, 1.5vw, 1.6rem);
   line-height: 1.6;
 }
 
@@ -150,13 +142,10 @@
   content: "💡";
   top: 50%;
   transform: translateY(-50%);
-  height: 3.5rem;
-  width: 3.5rem;
-  margin-left: -50px;
+  margin-left: -40px;
   background-color: rgba(#396afc, 0.3);
   border-radius: 100%;
-  font-size: clamp(1.5rem, 1.8vw, 2rem);
-  line-height: 1.6;
+  font-size: clamp(1.2rem, 1.8vw, 1.5rem);
   text-align: center;
   z-index: 1;
 }
@@ -167,7 +156,6 @@
   padding: 15px 0 15px 25px;
   border-radius: 5px;
   box-shadow: 0 0 2px 3px #eee;
-  font-size: 1.6rem;
 }
 
 .blog-post summary {
@@ -286,9 +274,9 @@
 }
 
 .title {
-  font-size: 2rem;
   letter-spacing: 1px;
   color: var(--text-color);
+  font-size: var(--body);
   border-bottom: 3px dotted var(--heading-bar-color);
   padding-bottom: 7px;
   margin-bottom: 15px;
@@ -296,7 +284,6 @@
 
 .post-title {
   margin-bottom: 10px;
-  font-size: clamp(15px, 2vw, 20px);
   line-height: 1.5;
 }
 
@@ -312,7 +299,6 @@
 
   .title {
     margin-bottom: 10px;
-    font-size: 1.3rem;
   }
 
   .before {
