--- a/src/styles/postList.module.scss
+++ b/src/styles/postList.module.scss
@@ -38,6 +38,13 @@
   }
 }
 
+.date,
+.series,
+.tags,
+.description {
+  font-size: clamp(0.9rem, 1.5vw, 0.98rem);
+}
+
 .date {
   display: flex;
   margin-bottom: 5px;
