--- a/src/styles/post.module.css
+++ b/src/styles/post.module.css
@@ -109,7 +109,7 @@
 .blog-post th {
   border: 1px solid #bbb;
   padding: 10px 15px;
-  background: var(--main-color);
+  background: var(--post-link-color);
   color: #fff;
   font-weight: 400;
   line-height: 1.3;
@@ -184,7 +184,6 @@
   .blog-post h2 {
     margin: 45px 0 20px;
     padding: 4px 0 4px 1.2rem;
-    border-left: 7px solid var(--main-color);
   }
 
   .blog-post h3 {
@@ -230,7 +229,7 @@
   .blog-post td {
     padding: 5px 8px;
   }
-    
+
   .blog-post aside {
     padding: 10px 15px 0 50px;
     width: 85%;
