--- a/src/styles/series.module.css
+++ b/src/styles/series.module.css
@@ -22,12 +22,12 @@
   color: var(--link-color);
   font-weight: 500;
   text-decoration: none;
-  transition: 0.3s;
+  transition: 0.1s;
 }
 
 .link:hover {
-  color: var(--main-color);
-  border-color: var(--main-color);
+  color: var(--post-link-color);
+  border-color: var(--post-link-color);
 }
 
 @media (max-width: 768px) {
