--- a/src/styles/mobilePagination.module.css
+++ b/src/styles/mobilePagination.module.css
@@ -1,11 +1,9 @@
 .mobile-pagination {
   position: relative;
-  display: flex;
-  justify-content: space-around;
-  width: 98%;
+  width: 93%;
   height: 43px;
-  margin: 20px 0 50px;
-  font-size: 2.5rem;
+  margin: 20px auto 50px;
+  font-size: 1.5rem;
   font-weight: 100;
 }
 
@@ -20,10 +18,7 @@
   border: 1px solid #ccc;
   border-radius: 2px;
   text-align: center;
-}
-
-.icon {
-  color: #888;
+  color: #444;
 }
 
 .topButton {
