--- a/src/styles/pagination.module.css
+++ b/src/styles/pagination.module.css
@@ -1,4 +1,5 @@
 .pagination {
+  composes: side-by-side from "./utils.module.css";
   position: relative;
   width: 50%;
   margin: 100px auto 80px;
@@ -23,9 +24,6 @@
 
 .prev,
 .next {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
   display: inline-block;
   padding: 5px 20px;
   border: 2px solid var(--main-color);
@@ -43,9 +41,7 @@
 }
 
 .nation-links {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  composes: side-by-side from "./utils.module.css";
   position: absolute;
   top: 50%;
   left: 50%;
