--- a/src/styles/pagination.module.css
+++ b/src/styles/pagination.module.css
@@ -34,8 +34,7 @@
   font-weight: 500;
 }
 
-.prev:hover,
-.next:hover {
+:is(.prev, .next):hover {
   background: var(--main-color);
   color: #fff;
 }
