--- a/src/styles/post.module.css
+++ b/src/styles/post.module.css
@@ -132,7 +132,7 @@
 
 .blog-post aside p {
   margin: 0;
-  font-size: clamp(0.85rem, 1vw, 0.98rem);
+  font-size: clamp(0.85rem, 1vw, 1rem);
   line-height: 1.6;
 }
 
@@ -142,7 +142,7 @@
   top: 50%;
   transform: translateY(-50%);
   margin-left: -40px;
-  background-color: rgba(#396afc, 0.3);
+  background-color: #396afc;
   border-radius: 100%;
   font-size: clamp(1.2rem, 1.8vw, 1.5rem);
   text-align: center;
