--- a/src/styles/pagination.module.css
+++ b/src/styles/pagination.module.css
@@ -28,16 +28,16 @@
   top: 50%;
   transform: translateY(-50%);
   padding: 5px 20px;
-  border: 2px solid var(--main-color);
+  border: 2px solid var(--heading-bar-color);
   border-radius: 50px;
-  transition: 0.3s;
+  transition: 0.1s;
   text-decoration: none;
-  color: var(--main-color);
+  color: var(--heading-bar-color);
   font-weight: 500;
 }
 
 :is(.prev, .next):hover {
-  background: var(--main-color);
+  background: var(--heading-bar-color);
   color: #fff;
 }
 
@@ -57,7 +57,7 @@
 
 .items .text {
   padding: 0.7rem 1rem;
-  background-color: var(--main-color);
+  background-color: var(--heading-bar-color);
   color: #fff;
 }
 
@@ -70,7 +70,7 @@
 }
 
 .items .link:hover a {
-  background-color: var(--main-color);
+  background-color: var(--heading-bar-color);
 }
 
 @media (max-width: 768px) {
