--- a/src/styles/post.module.css
+++ b/src/styles/post.module.css
@@ -23,19 +23,19 @@
   margin-bottom: 30px;
   padding-bottom: 8px;
   border-bottom: 7px solid var(--heading-bar-color);
-  font-size: clamp(1.6rem, 5vw, 2.5rem);
+  font-size: clamp(1.5rem, 5vw, 2.2rem);
 }
 
 .blog-post h2 {
   margin: 50px 0 20px;
   padding: 7px 0 7px 2rem;
   border-left: 9px solid var(--heading-bar-color);
-  font-size: clamp(1.3rem, 4.1vw, 2.2rem);
+  font-size: clamp(1.3rem, 4.1vw, 2rem);
 }
 
 .blog-post h3 {
   margin: 30px 0 20px;
-  font-size: clamp(1.15rem, 4vw, 2rem);
+  font-size: clamp(1.15rem, 4vw, 1.75rem);
 }
 
 .blog-post p {
@@ -132,7 +132,7 @@
 
 .blog-post aside p {
   margin: 0;
-  font-size: clamp(0.85rem, 1vw, 1rem);
+  font-size: 0.95rem;
   line-height: 1.6;
 }
 
@@ -141,10 +141,11 @@
   content: "💡";
   top: 50%;
   transform: translateY(-50%);
-  margin-left: -40px;
-  background-color: #396afc;
+  margin-left: -50px;
+  background-color: rgba(57, 106, 252, 0.4);
+  padding: 8px;
   border-radius: 100%;
-  font-size: clamp(1.2rem, 1.8vw, 1.5rem);
+  font-size: clamp(1.05rem, 1.8vw, 1.3rem);
   text-align: center;
   z-index: 1;
 }
