--- a/src/styles/post.module.css
+++ b/src/styles/post.module.css
@@ -1,7 +1,14 @@
 .blog-post {
-  width: max(52%, 324px);
+  width: 50%;
+  max-width: 780px;
   margin-left: 13vw;
   margin-right: 5vw;
+}
+
+@media (width < 768px) {
+  .blog-post {
+    width: 88%;
+  }
 }
 
 .blog-post a {
@@ -12,7 +19,7 @@
   text-decoration: underline;
 }
 
-:is(.blog-post) h1, h2, h3 {
+.blog-post :is(h1, h2, h3) {
   padding-top: 10px;
   line-height: 1.5;
 }
