--- a/src/styles/postInfo.module.css
+++ b/src/styles/postInfo.module.css
@@ -1,7 +1,7 @@
 .post-info {
   margin-top: 50px;
   margin-left: 13vw;
-  width: max(50%, 324px);
+  width: max(50%, 348px);
 }
 
 .svg {
@@ -28,7 +28,7 @@
   background-clip: text;
   -webkit-text-fill-color: rgba(255, 255, 255, 0);
   margin: 15px 0;
-  font-size: clamp(1.2rem, 2.5vw, 3.5rem);
+  font-size: clamp(1.2rem, 2.5vw, 3.2rem);
   font-weight: 400;
   letter-spacing: 1px;
   line-height: 1.5;
@@ -57,6 +57,7 @@
 
 .description {
   width: max(300px, 90%);
+  line-height: 1.75;
 }
 
 @media (max-width: 768px) {
