--- a/src/styles/tableOfContent.module.css
+++ b/src/styles/tableOfContent.module.css
@@ -5,12 +5,19 @@
   font-size: 0.95rem;
 }
 
+.table-of-content > ul {
+  padding: 30px 0;
+  overflow-y: auto;
+  scrollbar-width: none;
+}
+
 .table-of-content ul {
   position: sticky;
   top: 15vh;
   padding-left: 12px;
   list-style: none;
   margin-left: 2px;
+  max-height: 70vh;
 }
 
 .table-of-content li {
